# sezonowyogrod

./: .gitignore  README.md  docker-compose.yml  nginx.conf  requirements.txt  webpack.config.js
.github/workflows/: CD.yml  deploy.yml
backend/: Dockerfile  api.py  auth.py  config.py  config_example.py  core.py  models.py  pyproject.toml  requirements.txt  test.py
backend2/: Dockerfile  core.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/Authorization/: Auth.css  Auth.js  Auth.jsx
frontend/src/Footer/: Footer.css  Footer.jsx
frontend/src/Gallery/: Gallery.js
frontend/src/Home/: Home.css  Home.js  Home.jsx
frontend/src/Logout/: Logout.js  Logout.jsx
frontend/src/Navbar/: Navbar.css  Navbar.js  Navbar.jsx
frontend/src/Others/: Loader.css  Loader.jsx  requests.js  requests.jsx  token.js
frontend/src/Profile/: Profile.js  Profile.jsx
frontend/src/Reservation/: Reservation.css  Reservation.js  Reservation.jsx  Tables.js
frontend/src/Shop/: Shop.js  Shop.jsx
nginx/: Dockerfile  index.html  nginx.conf  text.conf
src/: index.html
web/: Dockerfile
